# kitten-tts-rs

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
examples/: kitten-say.sh
src/: main.rs
