[package]
name = "kitten-tts"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Rust CLI for KittenTTS ONNX models"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
hex = "0.4"
hound = "3.5"
ndarray = "0.17"
once_cell = "1.21"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray", "cuda"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
